fix alignment of newsletter sign up on large screens

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -56,6 +56,14 @@ $btn-primary-color: white !important;
 		width: 70%;
 	}
 
+	.modal-dialog {
+		position: fixed;
+		left: 0;
+		margin-left: 25%;
+		margin-right: 25%;
+		width: 50%;
+	}
+
 }
 // for smaller screens, below. This is a bootstrap breakpoint.
 @media(max-width:767px){
